fix screen overflow

--- a/main/src/app/globals.css
+++ b/main/src/app/globals.css
@@ -27,7 +27,8 @@ body {
 body {
   color: rgb(var(--mainText-rgb));
   background: linear-gradient(168.43deg, #FFFFFF -6.5%, #D9E6FF 101.21%);
-  ;
+  padding-bottom: 10vh;
+  height: 100vh;
 }
 
 main {
@@ -35,9 +36,9 @@ main {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 0 2rem 0;
+  /* padding: 1rem 0 2rem 0; */
   width: 100%;
-  height: calc(100vh - 72px);
+  /* height: calc(100vh - 72px); */
 }
 
 #mainBg1 {
